--- a/homepage.html
+++ b/homepage.html
@@ -361,7 +361,7 @@ hr {
 </ul>
 </div>
 <div class="quote">
-<h1>Don’t die without embracing the daring adventure your life was meant to be. – Steve Pavlina</h1> 
+<h1>Donâ€™t die without embracing the daring adventure your life was meant to be. â€“ Steve Pavlina</h1> 
 </div>
 <div class="button">
 <a href="C:\html project\secondpage.html" class="btn">Explore</a>
